Add Postgres session store
